# AkoC

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: akocConfig.cmake.in
include/ako/: ako.h  ako.hpp  elem.h  types.h
src/: ako.c  elem.c  private.h
src/lex/: parser.c  parser.h  token.h  tokenizer.c
src/mem/: dyn_array.c  dyn_array.h  dyn_string.c  dyn_string.h
test/: main.c
utils/: CMakeLists.txt  akocli.c
